--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <hr>
     <!-- NOTE: Footer -->
     <footer>
-      <a id="gitanchor"  href="https://github.com/praveenNagaraj97">Link to Github</a>
+      <a id="gitanchor"  href="https://github.com/praveenNagaraj97-au7">Link to Github</a>
       <img id="gitimg" src="git.png" alt="">
     </footer>
   </body>
